# leptos-ws-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md  sqlite.db  sqlite.db-shm  sqlite.db-wal
.github/workflows/: release.yml
.sqlx/: query-25c21474c7622eb4a99a55647d9fbe0c2ac53ccc9ed3721102727c6f75ff3b55.json  query-3ce492a2775d3ff5d5181d77d61101d369765ae3e2f2a3be167c17b870bab839.json  query-411eaa52fc8e5bed88dc3346fb69b06ddfc63703cda59e17ecd9d85a6a6bb262.json  query-450f64ca4275e91158f12e8f9fa3763e5fc2350fd476e48d3136c2cc2309bda9.json  query-52bdaafa7219c3fd254594c0ed41a3baf176267926c7e21bbe394ef8dacd44ab.json  query-545cd26add44374ca2f20c391149408cb993fac205e9d3651990d92276ba76e2.json  query-55800d3d265d4277727f36afed00994a201f69708516d16456e22c10176ba4c8.json  query-5ae5502d7b82fc7a1889e6658b972d72786c04a56d95a5e5514601d512c67c23.json  query-5fd689bec0814bdebc8768380b1291ad55743904d85372df1da7b352aeabae0f.json  query-69da1507a9a720ad7730b50449aaf53139c35003dbe078d838077d8522eb39f0.json  query-764d767f5bc2d8915faa58365fdad4e34aee7930ee386c019eb334c4f3c5c1d9.json  query-77eca098ab3499e3b5244651df76601d2401007a3338b5a31c310062d63b993f.json  query-7b488b628a48e584f122a48e2dce37c9f645bcfa5c9ffed212c7241f15becfca.json  query-8aa6afeb097e7c4cef7851cf418ab4afbeeb9bcd4645849e9ba993db298d4230.json  query-bc22e00ab5d1c6bf53b22ac0cc4612e560d5d592051be0c7ec5f961a10566293.json  query-bcc75f78e8e282da298aac1d69c1241770b3d19bc3a5496ad914b3caede21b98.json  query-c59e59c81e343ebd856abcbfbc00a8b3853bdc46bfc5acd6808bfa07fd0a744c.json  query-cce5a40f14708c71b7e2fa595571df6d20cd74547d79a7de90737ebe07317016.json  query-d6e4784f5c9cbc9c0d57d839f49c04352b378ab3e5f4044c7c10e558db83dc92.json  query-daf0351c78d4525d9894e77bcad0b238b8f2b5e59fe8645f6a221dd68e9d16c5.json  query-dd99e48b1572e25db38f03da95984fda1072913b29bb6b3753a0d351583dfff6.json  query-e2af46e4b1765b59f2ea84d758a69e951dcb73e6272b57f2be18cc9e79ad2c50.json  query-fa88c8aa4113cd006fa96a9b6f78ae568520e115a0d537c24e6750f0bbc29a9e.json
.zed/: settings.json
api/: Cargo.toml
api/src/: auth.rs  db.rs  domain.rs  lib.rs  migrations.rs  server_fn.rs
api/src/db/: group_repository.rs  message_repository.rs  user_repository.rs
api/src/domain/: group.rs  group_member.rs  message.rs  user.rs
api/src/server_fn/: chat.rs  groups.rs  login.rs  logout.rs  settings.rs  signup.rs
app/: Cargo.toml
app/src/: components.rs  contexts.rs  lib.rs  pages.rs
app/src/components/: detect_mobile.rs  include_svg.rs
app/src/components/button/: button.module.scss  mod.rs
app/src/components/card/: card.module.scss  mod.rs
app/src/components/chat/: chat.module.scss  mod.rs
app/src/components/checkbox/: checkbox.module.scss  mod.rs
app/src/components/dialog/: dialog.module.scss  mod.rs
app/src/components/dropdown/: dropdown.module.scss  mod.rs
app/src/components/groups/: groups.module.scss  mod.rs
app/src/components/header/: header.module.scss  mod.rs
app/src/components/input/: input.module.scss  mod.rs
app/src/components/input_bar/: input_bar.module.scss  mod.rs
app/src/components/multi_step/: mod.rs
app/src/components/spinner/: mod.rs  spinner.module.scss
app/src/components/text_box/: mod.rs  text_box.module.scss
app/src/components/theme_switcher/: mod.rs  theme_switcher.module.scss
app/src/contexts/: account_context.rs  theme_context.rs
app/src/pages/: chat.rs  home.rs  login.module.scss  login.rs  signup.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
migrator/: Cargo.toml
migrator/src/: lib.rs  main.rs  migrations.rs
migrator/src/migrations/: m0000_setup.rs  m0001_chat.rs  m0002_join_code.rs
server/: Cargo.toml
server/src/: main.rs
style/: fonts.scss  leptos-captcha.scss  main.scss
