[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos-use.workspace = true
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
log.workspace = true
serde = { workspace = true }
icondata.workspace = true
leptos_icons.workspace = true
chrono.workspace = true
leptos_styling = { workspace = true }
leptos-captcha.workspace = true
api = { path = "../api" }
thaw.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "api/hydrate","thaw/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "thaw/ssr",
    "api/ssr",
    "dep:leptos_axum",
]
