[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
migrator = { path = "../migrator" }
api = { path = "../api", features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
leptos-use = {workspace = true,features=["axum"]}
leptos_styling = { workspace = true, features = ["ssr"] }
leptos_ws = { workspace = true,features=["ssr"]}
leptos-captcha.workspace = true
dotenvy.workspace = true
axum_session.workspace = true
axum_session_auth.workspace = true
axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
uuid.workspace = true
